# apollo_data_auditor

./: .gitignore  APOLLO_Beta_Guide_2026.docx  CHANGELOG.md  CLA.md  DATA_PRIVACY.md  DPA.md  LICENSE  MEMO_TEST_INSTALLATEURS.md  NOTICE  PRIVACY_POLICY.md  README.md  README_APOLLO_DATA_AUDITOR.md  SECURITY.md  SHA256SUMS.txt  THIRD_PARTY_LICENSES.md  benchmark_onedrive.py  install.sh  install_macos.sh  install_windows.ps1
.github/: dependabot.yml
.github/workflows/: build-agent.yml
agent/: README.md  VERSION  __init__.py  main.py  main_app.py  main_db.py  main_directory.py  main_infra.py  nuitka-crash-report.xml  requirements.txt  version.py
agent/backend/: __init__.py
agent/backend/src/: __init__.py
agent/config/: exclusions.yaml  onedrive_config.yaml
agent/core/: collector.py  db_differential.py  db_sampler.py  db_scanner.py  db_snapshot.py  dependency_checker.py  differential.py  exclusions.py  exporter.py  fingerprint.py  fingerprint_backend.py  infra_scanner.py  io_backend.py  network_mount.py  onedrive_collector.py  optimized_scanner.py  pii_scanner.py  snapshot.py
agent/core/app_connectors/: __init__.py  base.py  pennylane_connector.py  registry.py
agent/core/db_connectors/: __init__.py  base.py  mongodb.py  mysql.py  postgresql.py  registry.py  sqlserver.py  validator.py
agent/core/directory_connectors/: __init__.py  base.py  ldap_connector.py  registry.py
agent/models/: contracts.py
agent/observability/: __init__.py  config.py  health.py  log_analyzer.py  metrics_extractor.py
agent/packaging/: DEBLOCAGE_OS.md  GITHUB_ACTIONS_BUILD.md  Makefile  README.md  SHA256SUMS.txt
agent/packaging/linux/: README.md  build_linux.sh  install.sh
agent/packaging/macos/: README.md  apollo_agent.spec  build_macos.sh
agent/packaging/windows/: README.md  apollo_agent_win.spec  build_windows.bat  build_windows.py  installer.iss
agent/ui/: server.py
agent/ui/static/: api.js  app.js  auth.js  index.html  (+2 more)
apollo_io_native/: BUILD.md  Cargo.toml  README.md  WINDOWS_TEST_STANDALONE.md  build_windows.ps1  pyproject.toml  test_owner_domain.py
apollo_io_native/src/: bloom.rs  fingerprint.rs  hasher.rs  lib.rs  platform.rs  raw_collector.rs  reader.rs  stat.rs  walker.rs
apollo_io_native/tests/: test_module.py
critical/agent/: test_db_scanner_integration.py  test_db_scanner_pii.py  test_optimized_scanner.py  test_pii_scanner.py
docs/: changelog.html  connectors.html  faq.html  how-it-works.html  index.html  modules.html  quick-start.html  security.html  style.css
docs/legal/: cla.html  data-privacy.html  license.html  notice.html  security-policy.html  third-party.html
(+4 files in other folders)
