[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "apollo-io-native"
version = "0.1.0"
description = "Native I/O and Fingerprint acceleration for Apollo Agent"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Apollo Team" }
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["io", "performance", "fingerprint", "rust"]

[project.optional-dependencies]
dev = ["pytest", "pytest-benchmark"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "apollo_io_native"
strip = true
